# tweet_project

./: cwagentconfig.json  get_credentials.sh  pyproject.toml  supervisord.conf  tags_economia.txt  user_data.sh
tweet_app/: __init__.py  constants.py
tweet_app/processes/: __init__.py  sample.py  stream.py  timeline.py
tweet_app/utils/: __init__.py  get_credentials.py  utils.py
